# Elasticsearch-8.x-Cookbook

./: .gitignore  README.md  mac_setup.sh
ch01/elasticsearch-docker/: docker-compose.yml
ch01/opendistro-docker/: docker-compose.yml
ch02/: kibana_commands_002.txt
ch04/: populate_kibana_0.sh
ch12/: kibana_commands_012.txt
ch13/deeplearning4j/: pom.xml
ch13/deeplearning4j/src/main/java/com/packtpub/: PopulateIndex.java
ch13/high-level-client/: pom.xml
ch13/high-level-client/src/main/java/com/packtpub/: AggregationExample.java  BulkOperations.java  DocumentOperations.java  IndicesOperations.java  InitClientExample.java  MappingOperations.java  QueryCreation.java  QueryExample.java  QueryHelper.java  RestHighLevelClientHelper.java  ScrollQueryExample.java
ch13/http-java-client/src/main/java/com/packtpub/: AppWithSecurity.java  MyRequestRetryHandler.java
ch13/low-level-client/: pom.xml
ch14/deeplearningscala/: build.sbt
ch14/elastic4s_sample/: build.sbt
ch15/code/: aggregation.py  document_management.py  mapping_management.py  requirements.txt  searching.py
ch15/fastapi-es/: .gitignore  main.py  pylintrc  pyproject.toml  utils.py
ch15/fastapi-es/app/: asyc_es_example.py  main.py
ch16/analysis_plugin/: NOTICE.txt  build.gradle
ch16/ingest_plugin/: build.gradle  settings.gradle
ch16/rest_plugin/: build.gradle  settings.gradle
ch16/simple_plugin/: build.gradle  settings.gradle
ch17/: download_geoname.sh  es.pig  query.es  setup_spark.sh  simple_index.txt  spark_index2.txt  spark_index3.txt
ch17/alpakka/: build.sbt
(+33 files in other folders)
