[tool.poetry]
name = "fastapi-elasticsearch"
version = "0.1.0"
description = "FastAPI Elasticsearch"
authors = ["Alberto Paro <alberto.paro@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.4"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
python-dotenv = "^0.14.0"
elasticsearch = {extras = ["async"], version = "^7.11.0"}
cachetools = "^4.1.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest-cov = "^2.10.1"
pytest-elasticsearch = "^2.0.1"
pytest-asyncio = "^0.14.0"
coverage = "^5.3"
pylint = "^2.6.0"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
flake8-bandit = "^2.1.2"
isort = "^5.6.4"
mypy = "^0.790"
black = "^20.8b1"
pre-commit = "^2.9.2"
tox = "^3.20.1"

[tool.poetry.scripts]
start = "app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

